# codictate

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  SECURITY.md  electrobun.config.ts  eslint.config.mjs  package.json  postcss.config.mjs  tsconfig.bun.json  tsconfig.json  tsconfig.vite.json  version.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
docs/: AEROSPACE.md  FORMATTING.md  INSTALL.md  MACOS_SIGNING_AND_NOTARIZATION.md  RECORDING_INDICATOR.md  RELEASING.md
entitlements/: KeyListener.entitlements
native/CodictateFormatterHelper/: Package.swift
native/CodictateObserverHelper/: Package.swift
native/CodictateParakeetHelper/: Package.resolved  Package.swift
native/CodictateWindowHelper/: Package.swift
native/CodictateWindowsHelper/: Cargo.toml
native/CodictateWindowsHelper/src/: main.rs
scripts/: download-stats.py  duplicate-dist-assets-for-indicator.ts  post-build.ts  post-wrap.ts  pre-build.ts  release-bridge-migration.sh  release.sh  test-formatter.ts
src/bun/: index.ts  setup-indicator-window.ts  setup-menu.ts  setup-recording.ts  setup-tray.ts  setup-window.ts
src/mainview/: App.tsx  app-events.ts  css.d.ts  index.css  indicator.css  indicator.html  main.tsx  rpc.ts
src/scripts/: build-swift.sh
src/shared/: dictation-shortcut.ts  formatting-modes.ts  platform.ts  recording-duration-presets.ts  (+6 more)
(+86 files in other folders)
