[package]
name = "codictate-windows-helper"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
arboard = "3.6.1"
cpal = "0.16.0"
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }

[[bin]]
name = "CodictateWindowsHelper"
path = "src/main.rs"
